# remote

./: Dockerfile  Jenkinsfile  install_webdriver.sh  pyproject.toml  requirements.txt  tox.ini
tests/: .gitignore
tests/Common/: GoogleSearch.py  consts.py
tests/Tests/: test_google_search.robot
