[tool.poetry]
name = "samsung_school_e2e_tests"
version = "0.1.0"
description = "End to end tests for samsung school project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
robotframework = "^3.1"
robotframework-seleniumlibrary = "^3.3"
tox = "^3.5"
robotframework-pageobjectlibrary = { git = "https://github.com/boakley/robotframework-pageobjectlibrary" }
robotframework-pabot = "^0.51"
PyYAML = "^3.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
